fix: adjust spacing of primary nav items

--- a/app/assets/stylesheets/nla/_header.scss
+++ b/app/assets/stylesheets/nla/_header.scss
@@ -15,8 +15,8 @@
       border-bottom-width: 0.375rem;
       border-bottom-style: solid;
       border-bottom-color: transparent;
-      padding-left: 1rem;
-      padding-right: 1rem;
+      padding-left: 0.625rem;
+      padding-right: 0.625rem;
       padding-bottom: 0.75rem;
       line-height: 1.2;
       
